# ChangeLog for dev-tex/luximono
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jul 2007; Ali Polatel <hawking@gentoo.org> luximono-2004.ebuild:
  removed trailing whitespace

  15 Jul 2007; Pavel Sanda (ps) <ps at twin.jikos.cz> +luximono-2004.ebuild,
  +metadata.xml:
  New Ebuild for bug 185467
