@@ -1,4 +1,4 @@
 DIST LuxiMono-2004.zip 199660 RMD160 edc8d07911945f4db27c5741e6c7597cceebdae6 SHA1 3b59fd6e57c1e96dbaacb0c21222a49477468181 SHA256 93f6466649edcb0de608589805c1bc0f04cb364a4efcac3a81fbc38488272293
-EBUILD luximono-2004.ebuild 1367 RMD160 e4cc311fdfc56acc767d9a41a669f450a1a80d94 SHA1 84435cc3ba983f461b95a8684b4283b72b4eb01b SHA256 472927b76ef92df00fa4d56690fa45d17db808c59c26ba293142155b70e8765c
-MISC ChangeLog 341 RMD160 0c7dc6ef2eea8b2b0e5a0cdfaaabaf8d0853f78f SHA1 fd5b8f7345b834adb50640e0887fa7ad5ceef5e0 SHA256 797280a34dd715f3326f329e1ce805e8fa91d0a6bac528bd7ff685436ffd7ffd
+EBUILD luximono-2004.ebuild 1382 RMD160 37409200b53d0537a1c5f48e78e9461979d34540 SHA1 bc5306380b7f2c32866be4d30e75388698f5c960 SHA256 f3afef382c1583d4690adc72ada19dbdce512ae97386c93d13ca27da9603c602
+MISC ChangeLog 534 RMD160 68f583a52d9761af06baa3ef5a3fced88a36f3bb SHA1 70d0d4a4f0cf6883470985ca3189df5563f42f4a SHA256 75e63f60ed00be705c9b69b2c73307fe88af13b2e2bec3e11b69730ea5f3d83b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
