@@ -1,6 +1,11 @@
 # ChangeLog for dev-tex/luximono
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
+  luximono-2004.ebuild:
+  Since PACK, and SUPPLIER are only used in src_install, avoid polluting
+  global scope by declaring them local
 
   21 Jul 2007; Ali Polatel <hawking@gentoo.org> luximono-2004.ebuild:
   removed trailing whitespace
